# the-amazing-book-of-everything

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
tests/: test_the_amazing_book_of_everything.py
the_amazing_book_of_everything/: config.py
the_amazing_book_of_everything/chapters/character-name-generator/: main.py
